@@ -31,6 +31,18 @@ import|;
 end_import
 
 begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertTrue
+import|;
+end_import
+
+begin_import
 import|import
 name|java
 operator|.
@@ -65,6 +77,20 @@ operator|.
 name|fs
 operator|.
 name|PathIOException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|ipc
+operator|.
+name|RemoteException
 import|;
 end_import
 
@@ -256,6 +282,138 @@ name|pe
 operator|.
 name|getMessage
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testRemoteExceptionUnwrap ()
+specifier|public
+name|void
+name|testRemoteExceptionUnwrap
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|PathIOException
+name|pe
+decl_stmt|;
+name|RemoteException
+name|re
+decl_stmt|;
+name|IOException
+name|ie
+decl_stmt|;
+name|pe
+operator|=
+operator|new
+name|PathIOException
+argument_list|(
+name|path
+argument_list|)
+expr_stmt|;
+name|re
+operator|=
+operator|new
+name|RemoteException
+argument_list|(
+name|PathIOException
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+literal|"test constructor1"
+argument_list|)
+expr_stmt|;
+name|ie
+operator|=
+name|re
+operator|.
+name|unwrapRemoteException
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|ie
+operator|instanceof
+name|PathIOException
+argument_list|)
+expr_stmt|;
+name|ie
+operator|=
+name|re
+operator|.
+name|unwrapRemoteException
+argument_list|(
+name|PathIOException
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|ie
+operator|instanceof
+name|PathIOException
+argument_list|)
+expr_stmt|;
+name|pe
+operator|=
+operator|new
+name|PathIOException
+argument_list|(
+name|path
+argument_list|,
+literal|"constructor2"
+argument_list|)
+expr_stmt|;
+name|re
+operator|=
+operator|new
+name|RemoteException
+argument_list|(
+name|PathIOException
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+literal|"test constructor2"
+argument_list|)
+expr_stmt|;
+name|ie
+operator|=
+name|re
+operator|.
+name|unwrapRemoteException
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|ie
+operator|instanceof
+name|PathIOException
+argument_list|)
+expr_stmt|;
+name|ie
+operator|=
+name|re
+operator|.
+name|unwrapRemoteException
+argument_list|(
+name|PathIOException
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|ie
+operator|instanceof
+name|PathIOException
 argument_list|)
 expr_stmt|;
 block|}
