@@ -428,6 +428,9 @@ Release 2.5.0 - UNRELEASED
     HADOOP-10547. Give SaslPropertiesResolver.getDefaultProperties() public
     scope. (Benoy Antony via Arpit Agarwal)
 
+    HADOOP-10543. RemoteException's unwrapRemoteException method failed for
+    PathIOException. (Yongjun Zhang via atm)
+
 Release 2.4.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
